--- a/apps/flight-app/project.json
+++ b/apps/flight-app/project.json
@@ -4,8 +4,10 @@
   "prefix": "flight-workspace",
   "targets": {
     "build": {
-      "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "executor": "@nrwl/angular:webpack-browser",
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/flight-app",
         "index": "apps/flight-app/src/index.html",
@@ -23,7 +25,11 @@
           "apps/flight-app/src/assets/css/demo.css",
           "apps/flight-app/src/assets/css/themify-icons.css"
         ],
-        "scripts": []
+        "scripts": [],
+        "customWebpackConfig": {
+          "path": "apps/flight-app/webpack.config.js"
+        },
+        "commonChunk": false
       },
       "configurations": {
         "production": {
@@ -45,7 +51,10 @@
               "with": "apps/flight-app/src/environments/environment.prod.ts"
             }
           ],
-          "outputHashing": "all"
+          "outputHashing": "all",
+          "customWebpackConfig": {
+            "path": "apps/flight-app/webpack.prod.config.js"
+          }
         },
         "development": {
           "buildOptimizer": false,
@@ -59,7 +68,7 @@
       "defaultConfiguration": "production"
     },
     "serve": {
-      "executor": "@angular-devkit/build-angular:dev-server",
+      "executor": "@nrwl/angular:webpack-server",
       "configurations": {
         "production": {
           "browserTarget": "flight-app:build:production"
@@ -68,12 +77,17 @@
           "browserTarget": "flight-app:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "port": 5000,
+        "publicHost": "http://localhost:5000"
+      }
     },
     "extract-i18n": {
-      "executor": "@angular-devkit/build-angular:extract-i18n",
+      "executor": "ngx-build-plus:extract-i18n",
       "options": {
-        "browserTarget": "flight-app:build"
+        "browserTarget": "flight-app:build",
+        "extraWebpackConfig": "apps/flight-app/webpack.config.js"
       }
     },
     "lint": {
@@ -87,12 +101,17 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/flight-app"],
+      "outputs": [
+        "coverage/apps/flight-app"
+      ],
       "options": {
         "jestConfig": "apps/flight-app/jest.config.ts",
         "passWithNoTests": true
       }
     }
   },
-  "tags": ["type:app", "domain:flights"]
+  "tags": [
+    "type:app",
+    "domain:flights"
+  ]
 }
