--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -38,6 +38,9 @@
       ],
       "@flight-workspace/passenger/feature-search": [
         "libs/passenger/feature-search/src/index.ts"
+      ],
+      "@flight-workspace/shared/util-auth": [
+        "libs/shared/util-auth/src/index.ts"
       ]
     }
   },
