--- a/libs/flight-lib/project.json
+++ b/libs/flight-lib/project.json
@@ -5,9 +5,7 @@
   "targets": {
     "build": {
       "executor": "@nrwl/angular:ng-packagr-lite",
-      "outputs": [
-        "dist/libs/flight-lib"
-      ],
+      "outputs": ["dist/libs/flight-lib"],
       "options": {
         "project": "libs/flight-lib/ng-package.json"
       },
@@ -23,9 +21,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/libs/flight-lib"
-      ],
+      "outputs": ["coverage/libs/flight-lib"],
       "options": {
         "jestConfig": "libs/flight-lib/jest.config.ts",
         "passWithNoTests": true
@@ -41,8 +37,5 @@
       }
     }
   },
-  "tags": [
-    "type:feature",
-    "domain:flights"
-  ]
+  "tags": ["type:feature", "domain:flights"]
 }
