--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "affected:test": "nx affected:test",
     "affected:lint": "nx affected:lint",
     "affected:dep-graph": "nx affected:dep-graph",
-    "affected": "nx affected",
-    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
+    "affected": "nx affected"
   },
   "private": true,
   "dependencies": {
