--- a/apps/flight-admin-e2e/project.json
+++ b/apps/flight-admin-e2e/project.json
@@ -1,4 +1,5 @@
 {
+  "root": "apps/flight-admin-e2e",
   "sourceRoot": "apps/flight-admin-e2e/src",
   "projectType": "application",
   "targets": {
@@ -16,18 +17,12 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "apps/flight-admin-e2e/**/*.{js,ts}"
-        ]
+        "lintFilePatterns": ["apps/flight-admin-e2e/**/*.{js,ts}"]
       }
     }
   },
   "tags": [],
-  "implicitDependencies": [
-    "flight-admin"
-  ]
+  "implicitDependencies": ["flight-admin"]
 }
