--- a/apps/flight-admin/project.json
+++ b/apps/flight-admin/project.json
@@ -5,9 +5,7 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/flight-admin",
         "index": "apps/flight-admin/src/index.html",
@@ -18,9 +16,7 @@
           "apps/flight-admin/src/favicon.ico",
           "apps/flight-admin/src/assets"
         ],
-        "styles": [
-          "apps/flight-admin/src/styles.css"
-        ],
+        "styles": ["apps/flight-admin/src/styles.css"],
         "scripts": []
       },
       "configurations": {
@@ -85,17 +81,12 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/apps/flight-admin"
-      ],
+      "outputs": ["coverage/apps/flight-admin"],
       "options": {
         "jestConfig": "apps/flight-admin/jest.config.ts",
         "passWithNoTests": true
       }
     }
   },
-  "tags": [
-    "type:app",
-    "domain:flights"
-  ]
+  "tags": ["type:app", "domain:flights"]
 }
