--- a/apps/flight-app/project.json
+++ b/apps/flight-app/project.json
@@ -4,10 +4,8 @@
   "prefix": "flight-workspace",
   "targets": {
     "build": {
-      "executor": "@nrwl/angular:webpack-browser",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "executor": "@angular-devkit/build-angular:browser",
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/flight-app",
         "index": "apps/flight-app/src/index.html",
@@ -25,11 +23,7 @@
           "apps/flight-app/src/assets/css/demo.css",
           "apps/flight-app/src/assets/css/themify-icons.css"
         ],
-        "scripts": [],
-        "customWebpackConfig": {
-          "path": "apps/flight-app/webpack.config.js"
-        },
-        "commonChunk": false
+        "scripts": []
       },
       "configurations": {
         "production": {
@@ -51,10 +45,7 @@
               "with": "apps/flight-app/src/environments/environment.prod.ts"
             }
           ],
-          "outputHashing": "all",
-          "customWebpackConfig": {
-            "path": "apps/flight-app/webpack.prod.config.js"
-          }
+          "outputHashing": "all"
         },
         "development": {
           "buildOptimizer": false,
@@ -68,7 +59,7 @@
       "defaultConfiguration": "production"
     },
     "serve": {
-      "executor": "@nrwl/angular:webpack-server",
+      "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
           "browserTarget": "flight-app:build:production"
@@ -77,17 +68,12 @@
           "browserTarget": "flight-app:build:development"
         }
       },
-      "defaultConfiguration": "development",
-      "options": {
-        "port": 5000,
-        "publicHost": "http://localhost:5000"
-      }
+      "defaultConfiguration": "development"
     },
     "extract-i18n": {
-      "executor": "ngx-build-plus:extract-i18n",
+      "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "flight-app:build",
-        "extraWebpackConfig": "apps/flight-app/webpack.config.js"
+        "browserTarget": "flight-app:build"
       }
     },
     "lint": {
@@ -101,17 +87,12 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/apps/flight-app"
-      ],
+      "outputs": ["coverage/apps/flight-app"],
       "options": {
         "jestConfig": "apps/flight-app/jest.config.ts",
         "passWithNoTests": true
       }
     }
   },
-  "tags": [
-    "type:app",
-    "domain:flights"
-  ]
+  "tags": ["type:app", "domain:flights"]
 }
