--- a/libs/logger-lib/project.json
+++ b/libs/logger-lib/project.json
@@ -5,9 +5,7 @@
   "targets": {
     "build": {
       "executor": "@nrwl/angular:package",
-      "outputs": [
-        "dist/libs/logger-lib"
-      ],
+      "outputs": ["dist/libs/logger-lib"],
       "options": {
         "project": "libs/logger-lib/ng-package.json"
       },
@@ -23,9 +21,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/libs/logger-lib"
-      ],
+      "outputs": ["coverage/libs/logger-lib"],
       "options": {
         "jestConfig": "libs/logger-lib/jest.config.ts",
         "passWithNoTests": true
@@ -41,8 +37,5 @@
       }
     }
   },
-  "tags": [
-    "type:util",
-    "domain:shared"
-  ]
+  "tags": ["type:util", "domain:shared"]
 }
