--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,28 +8,17 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es2020",
+    "target": "es2015",
     "module": "esnext",
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "lib": ["es2017", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@flight-workspace/dashboard-lib": [
-        "libs/dashboard-lib/src/index.ts"
-      ],
-      "@flight-workspace/flight-lib": [
-        "libs/flight-lib/src/index.ts"
-      ],
-      "@flight-workspace/logger-lib": [
-        "libs/logger-lib/src/index.ts"
-      ],
-      "@flight-workspace/my-plugin": [
-        "libs/my-plugin/src/index.ts"
-      ],
+      "@flight-workspace/dashboard-lib": ["libs/dashboard-lib/src/index.ts"],
+      "@flight-workspace/flight-lib": ["libs/flight-lib/src/index.ts"],
+      "@flight-workspace/logger-lib": ["libs/logger-lib/src/index.ts"],
+      "@flight-workspace/my-plugin": ["libs/my-plugin/src/index.ts"],
       "@flight-workspace/passenger/domain": [
         "libs/passenger/domain/src/index.ts"
       ],
@@ -41,8 +30,5 @@
       ]
     }
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["node_modules", "tmp"]
 }
