--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@angular/router": "14.0.2",
     "@ngrx/component": "14.0.0",
     "@ngrx/effects": "14.0.0",
-    "@ngrx/router-store": "^14.0.2",
+    "@ngrx/entity": "14.0.0",
+    "@ngrx/router-store": "14.0.0",
     "@ngrx/schematics": "14.0.0",
     "@ngrx/store": "14.0.0",
     "@ngrx/store-devtools": "14.0.0",
