ngrx + ddd with @angular-architects/ddd --ngrx

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,10 @@
                   "domain:passenger",
                   "domain:shared"
                 ]
+              },
+              {
+                "sourceTag": "domain:checkin",
+                "onlyDependOnLibsWithTags": ["domain:checkin", "domain:shared"]
               }
             ]
           }
