--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,10 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@flight-workspace/checkin/domain": ["libs/checkin/domain/src/index.ts"],
+      "@flight-workspace/checkin/feature-manage": [
+        "libs/checkin/feature-manage/src/index.ts"
+      ],
       "@flight-workspace/dashboard-lib": ["libs/dashboard-lib/src/index.ts"],
       "@flight-workspace/flight-lib": ["libs/flight-lib/src/index.ts"],
       "@flight-workspace/logger-lib": ["libs/logger-lib/src/index.ts"],
