--- a/libs/my-plugin/tsconfig.lib.json
+++ b/libs/my-plugin/tsconfig.lib.json
@@ -5,6 +5,6 @@
     "declaration": true,
     "types": []
   },
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "src/generators/data-lib/files/src/lib/__entityFileName__.ts__template__"],
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
 }
