--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -75,6 +75,10 @@
               {
                 "sourceTag": "domain:luggage",
                 "onlyDependOnLibsWithTags": ["domain:luggage", "domain:shared"]
+              },
+              {
+                "sourceTag": "domain:checkin",
+                "onlyDependOnLibsWithTags": ["domain:checkin", "domain:shared"]
               }
             ]
           }
