--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser-dynamic": "14.0.2",
     "@angular/router": "14.0.2",
     "@ngrx/component": "14.0.0",
+    "@ngrx/component-store": "^14.3.2",
     "@ngrx/effects": "14.0.0",
     "@ngrx/entity": "14.0.0",
     "@ngrx/router-store": "14.0.0",
