--- a/apps/passenger/project.json
+++ b/apps/passenger/project.json
@@ -5,7 +5,9 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/passenger",
         "index": "apps/passenger/src/index.html",
@@ -87,12 +89,17 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/passenger"],
+      "outputs": [
+        "coverage/apps/passenger"
+      ],
       "options": {
         "jestConfig": "apps/passenger/jest.config.ts",
         "passWithNoTests": true
       }
     }
   },
-  "tags": ["type:app", "domain:passenger"]
+  "tags": [
+    "type:app",
+    "domain:passenger"
+  ]
 }
