--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,8 @@
     "dashboard": "apps/dashboard",
     "dashboard-e2e": "apps/dashboard-e2e",
     "dashboard-lib": "libs/dashboard-lib",
+    "demo-data-access": "libs/demo-data-access",
+    "demo-data-access2": "libs/demo-data-access2",
     "external": "apps/external",
     "external-e2e": "apps/external-e2e",
     "flight-admin": "apps/flight-admin",
