--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,12 @@
     "baseUrl": ".",
     "paths": {
       "@flight-workspace/dashboard-lib": ["libs/dashboard-lib/src/index.ts"],
+      "@flight-workspace/demo-data-access": [
+        "libs/demo-data-access/src/index.ts"
+      ],
+      "@flight-workspace/demo-data-access2": [
+        "libs/demo-data-access2/src/index.ts"
+      ],
       "@flight-workspace/flight-lib": ["libs/flight-lib/src/index.ts"],
       "@flight-workspace/logger-lib": ["libs/logger-lib/src/index.ts"],
       "@flight-workspace/luggage/domain": ["libs/luggage/domain/src/index.ts"],
